refactor e adicionando novas entidades

--- a/src/main/resources/templates/cliente/home.html
+++ b/src/main/resources/templates/cliente/home.html
@@ -16,8 +16,8 @@
                   <th>Nome</th>
                   <th>E-mail</th>
                   <th>Telefone</th>
-                  <th>Cidade</th>
-                  <th>Estado</th>
+<!--                  <th>Cidade</th>-->
+<!--                  <th>Estado</th>-->
                   <th>Ações</th>
                 </tr>
               </thead>
