--- a/src/main/resources/templates/funcionario/detalhes.html
+++ b/src/main/resources/templates/funcionario/detalhes.html
@@ -34,12 +34,13 @@
               </div>
               <!-- /.card-header -->
               <div class="card-body">
+                <div sec:authorize="hasAuthority('ADMIN')">
                 <strong><i class="fas fa-book mr-1"></i> CPF</strong>
                 <p class="text-muted" th:text="${funcionario.cpf}">
                   484.325.821-07
                 </p>
-
                 <hr>
+                </div>
 
                 <strong><i class="fas fa-mobile mr-1"></i> Telefone</strong>
                 <p class="text-muted" th:text="${funcionario.telefone}">(82) 98881-5053</p>
@@ -51,32 +52,33 @@
 
                 <hr>
 
+                <div sec:authorize="hasAuthority('ADMIN')">
                 <strong><i class="fas fa-calendar-alt mr-1"></i> Data de Nascimento</strong>
                 <p class="text-muted" th:text="${#temporals.format(funcionario.dataNascimento)}">
                   30 de maio de 1981
                 </p>
 
                 <hr>
-                
-                <strong><i class="fas fa-calendar-alt mr-1"></i> Data de Admissão</strong>
-                <p class="text-muted" th:text="${#temporals.format(funcionario.dataAdmissao)}">
-                  30 de maio de 1981
-                </p>
+                    <strong><i class="fas fa-calendar-alt mr-1"></i> Data de Admissão</strong>
+                    <p class="text-muted" th:text="${#temporals.format(funcionario.dataAdmissao)}">
+                      30 de maio de 1981
+                    </p>
 
-                <hr>
-                
-                <div th:if="${funcionario.dataDemissao != null}">
-                  <strong><i class="fas fa-calendar-alt mr-1"></i> Data de Demissão</strong>
-                  <p class="text-muted" th:text="${#temporals.format(funcionario.dataDemissao)}">
-                    30 de maio de 1981
-                  </p>
+                    <hr>
 
-                  <hr>
+                    <div th:if="${funcionario.dataDemissao != null}">
+                      <strong><i class="fas fa-calendar-alt mr-1"></i> Data de Demissão</strong>
+                      <p class="text-muted" th:text="${#temporals.format(funcionario.dataDemissao)}">
+                        30 de maio de 1981
+                      </p>
+
+                      <hr>
+                    </div>
+
+                    <strong><i class="fas fa-map-marker-alt mr-1"></i> Endereço</strong>
+                    <p class="text-muted" th:text="${funcionario.endereco}">Malibu, California</p>
+                  </div>
                 </div>
-
-                <strong><i class="fas fa-map-marker-alt mr-1"></i> Endereço</strong>
-                <p class="text-muted" th:text="${funcionario.endereco}">Malibu, California</p>
-              </div>
               <!-- /.card-body -->
             </div>
             <!-- /.card -->
