--- a/src/main/resources/templates/cargo/home.html
+++ b/src/main/resources/templates/cargo/home.html
@@ -15,19 +15,19 @@
                 <tr>
                   <th>ID</th>
                   <th>Nome</th>
-                  <th>Ações</th>
+                  <th sec:authorize="hasAuthority('ADMIN')">Ações</th>
                 </tr>
               </thead>
               <tbody>
                 <tr th:each="cargo : ${cargos}">
                   <td th:text="${cargo.id}">183</td>
                   <td th:text="${cargo.nome}">Desenvolvedor(a) Back End Jr.</td>
-                  <td>
-                    <div class="btn-group">
-                      <a type="button" data-toggle="popover" data-placement="top" data-content="Editar" data-trigger="hover" class="btn btn-warning" th:href="@{/cargos/{id}/editar (id=${cargo.id})}">
+                  <td sec:authorize="hasAuthority('ADMIN')">
+                    <div class="btn-group" >
+                      <a sec:authorize="hasAuthority('ADMIN')" type="button" data-toggle="popover" data-placement="top" data-content="Editar" data-trigger="hover" class="btn btn-warning" th:href="@{/cargos/{id}/editar (id=${cargo.id})}">
                         <i class="fas fa-edit"></i>
                       </a>
-                      <a 
+                      <a sec:authorize="hasAuthority('ADMIN')"
                         type="button" data-toggle="popover" data-placement="top" 
                         data-content="Remover" data-trigger="hover" class="btn btn-danger" 
                         th:href="@{/cargos/{id}/excluir (id=${cargo.id})}" 
