--- a/src/main/resources/templates/cliente/home.html
+++ b/src/main/resources/templates/cliente/home.html
@@ -18,7 +18,7 @@
                   <th>Telefone</th>
 <!--                  <th>Cidade</th>-->
 <!--                  <th>Estado</th>-->
-                  <th>Ações</th>
+                  <th sec:authorize="hasAuthority('ADMIN')">Ações</th>
                 </tr>
               </thead>
               <tbody>
@@ -34,10 +34,10 @@
                       <a type="button" data-toggle="popover" data-placement="top" data-content="Detalhes" data-trigger="hover" class="btn btn-primary" th:href="@{/clientes/{id} (id=${cliente.id})}">
                         <i class="fas fa-eye"></i>
                       </a>
-                      <a type="button" data-toggle="popover" data-placement="top" data-content="Editar" data-trigger="hover" class="btn btn-warning" th:href="@{/clientes/{id}/editar (id=${cliente.id})}">
+                      <a sec:authorize="hasAuthority('ADMIN')" type="button" data-toggle="popover" data-placement="top" data-content="Editar" data-trigger="hover" class="btn btn-warning" th:href="@{/clientes/{id}/editar (id=${cliente.id})}">
                         <i class="fas fa-edit"></i>
                       </a>
-                      <a 
+                      <a  sec:authorize="hasAuthority('ADMIN')"
                         type="button" data-toggle="popover" data-placement="top" 
                         data-content="Remover" data-trigger="hover" class="btn btn-danger" 
                         th:href="@{/clientes/{id}/excluir (id=${cliente.id})}" 
