--- a/src/main/resources/templates/fragments/_aside.html
+++ b/src/main/resources/templates/fragments/_aside.html
@@ -8,6 +8,11 @@
 
   <!-- Sidebar -->
   <div class="sidebar">
+    <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+      <div class="info">
+        <a th:href="@{/perfil}" class="d-block" sec:authentication="name"></a>
+      </div>
+    </div>
     <!-- Sidebar Menu -->
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
@@ -20,7 +25,7 @@
             </p>
           </a>
           <ul class="nav nav-treeview">
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
               <a th:href="@{/clientes/cadastrar}" class="nav-link">
                 <i class="nav-icon fas fa-edit nav-icon"></i>
                 <p>Cadastrar</p>
@@ -44,7 +49,7 @@
             </p>
           </a>
           <ul class="nav nav-treeview">
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
               <a th:href="@{/funcionarios/cadastrar}" class="nav-link">
                 <i class="nav-icon fas fa-edit nav-icon"></i>
                 <p>Cadastrar</p>
@@ -68,7 +73,7 @@
             </p>
           </a>
           <ul class="nav nav-treeview">
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
               <a th:href="@{/cargos/cadastrar}" class="nav-link">
                 <i class="nav-icon fas fa-edit nav-icon"></i>
                 <p>Cadastrar</p>
@@ -92,7 +97,7 @@
             </p>
           </a>
           <ul class="nav nav-treeview">
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
               <a th:href="@{/projetos/cadastrar}" class="nav-link">
                 <i class="nav-icon fas fa-edit nav-icon"></i>
                 <p>Cadastrar</p>
