--- a/src/main/resources/templates/funcionario/formulario.html
+++ b/src/main/resources/templates/funcionario/formulario.html
@@ -18,6 +18,9 @@
           <!-- /.card-header -->
           <!-- form start -->
           <form method="POST" th:object="${funcionario}">
+
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+
             <div class="card-body">
               <fieldset>
                 <legend>Dados Pessoais</legend>
@@ -29,12 +32,18 @@
                     <div class="form-group">
                       <label for="nome">Nome</label>
                       <input type="text" class="form-control" placeholder="Mariane Josefa Gonçalves" th:field="*{nome}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('nome')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                   <div class="col-md-6 col-sm-12">
                     <div class="form-group">
                       <label for="cpf">CPF</label>
                       <input type="text" class="form-control" placeholder="401.447.368-61" th:field="*{cpf}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('cpf')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -44,12 +53,18 @@
                     <div class="form-group">
                       <label for="telefone">Telefone</label>
                       <input type="text" class="form-control" placeholder="(85) 99856-6603" th:field="*{telefone}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('telefone')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                   <div class="col-md-6 col-sm-12">
                     <div class="form-group">
                       <label for="email">E-mail</label>
                       <input type="email" class="form-control" placeholder="mariane@exemplo.com" th:field="*{email}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('email')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -59,18 +74,27 @@
                     <div class="form-group">
                       <label for="dataNascimento">Data de Nascimento</label>
                       <input type="date" class="form-control" th:field="*{dataNascimento}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('dataNascimento')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-12">
                     <div class="form-group">
                       <label for="dataAdmissao">Data de Admissão</label>
                       <input type="date" class="form-control" th:field="*{dataAdmissao}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('dataAdmissao')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-12">
                     <div class="form-group">
                       <label for="dataDemissao">Data de Demissão</label>
                       <input type="date" class="form-control" th:field="*{dataDemissao}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('dataDemissao')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -97,6 +121,9 @@
                     <div class="form-group">
                       <label for="endereco.cep">CEP</label>
                       <input type="text" class="form-control" placeholder="61626-365" th:field="*{endereco.cep}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('endereco.cep')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-12">
@@ -111,6 +138,9 @@
                     <div class="form-group">
                       <label for="endereco.cidade">Cidade</label>
                       <input type="text" class="form-control" placeholder="Caucaia" th:field="*{endereco.cidade}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('endereco.cidade')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -120,18 +150,27 @@
                     <div class="form-group">
                       <label for="endereco.bairro">Bairro</label>
                       <input type="text" class="form-control" placeholder="Pacheco" th:field="*{endereco.bairro}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('endereco.bairro')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-12">
                     <div class="form-group">
                       <label for="endereco.logradouro">Logradouro</label>
                       <input type="text" class="form-control" placeholder="Rua Santo Antônio" th:field="*{endereco.logradouro}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('endereco.logradouro')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-12">
                     <div class="form-group">
                       <label for="endereco.numero">Número</label>
                       <input type="text" class="form-control" placeholder="283" th:field="*{endereco.numero}">
+                      <ul>
+                        <li class="text-danger" th:each="erro : ${#fields.errors('endereco.numero')}" th:text="${erro}"></li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -144,6 +183,19 @@
                     </div>
                   </div>
                 </div>
+
+                <fieldset th:if="${funcionario.id == null}">
+                  <legend>Dados de Login</legend>
+
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <div class="form-group">
+                        <label for="senha">Senha</label>
+                        <input type="password" class="form-control" th:field="*{senha}">
+                      </div>
+                    </div>
+                  </div>
+                </fieldset>
               </fieldset>
             </div>
             <!-- /.card-body -->
