--- a/src/main/resources/templates/projeto/formulario.html
+++ b/src/main/resources/templates/projeto/formulario.html
@@ -18,6 +18,7 @@
         <!-- /.card-header -->
         <!-- form start -->
         <form method="POST" th:object="${projeto}">
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
           <div class="card-body">
             <input type="hidden" th:field="*{id}">
 
@@ -26,6 +27,9 @@
                 <div class="form-group">
                   <label for="nome">Nome</label>
                   <input type="text" class="form-control" placeholder="App Android" th:field="*{nome}">
+                  <ul>
+                    <li class="text-danger" th:each="erro : ${#fields.errors('nome')}" th:text="${erro}"></li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -46,6 +50,9 @@
                   <select th:field="*{cliente}" class="form-control select2bs4" style="width: 100%;">
                     <option th:each="cliente : ${clientes}" th:text="${cliente.nome}" th:value="${cliente.id}"></option>
                   </select>
+                  <ul>
+                    <li class="text-danger" th:each="erro : ${#fields.errors('cliente')}" th:text="${erro}"></li>
+                  </ul>
                 </div>
               </div>
               <div class="col-md-6 col-sm-12">
@@ -54,6 +61,9 @@
                   <select th:field="*{lider}" class="form-control select2bs4" style="width: 100%;">
                     <option th:each="lider : ${lideres}" th:text="${lider.nome}" th:value="${lider.id}"></option>
                   </select>
+                  <ul>
+                    <li class="text-danger" th:each="erro : ${#fields.errors('lider')}" th:text="${erro}"></li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -63,12 +73,18 @@
                 <div class="form-group">
                   <label for="dataInicio">Iníado em</label>
                   <input type="date" class="form-control" th:field="*{dataInicio}">
+                  <ul>
+                    <li class="text-danger" th:each="erro : ${#fields.errors('dataInicio')}" th:text="${erro}"></li>
+                  </ul>
                 </div>
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="form-group">
                   <label for="dataFim">Finalizado em</label>
                   <input type="date" class="form-control" th:field="*{dataFim}">
+                  <ul>
+                    <li class="text-danger" th:each="erro : ${#fields.errors('dataFim')}" th:text="${erro}"></li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -78,12 +94,18 @@
                 <div class="form-group">
                   <label for="orcamentoEstimado">Orçamento</label>
                   <input type="text" class="form-control" th:field="*{orcamento}">
+                  <ul>
+                    <li class="text-danger" th:each="erro : ${#fields.errors('orcamento')}" th:text="${erro}"></li>
+                  </ul>
                 </div>
               </div>
               <div class="col-md-6 col-sm-12">
                 <div class="form-group">
                   <label for="totalGasto">Gastos</label>
                   <input type="text" class="form-control" th:field="*{gastos}">
+                  <ul>
+                    <li class="text-danger" th:each="erro : ${#fields.errors('gastos')}" th:text="${erro}"></li>
+                  </ul>
                 </div>
               </div>
             </div>
