--- a/src/main/resources/templates/projeto/home.html
+++ b/src/main/resources/templates/projeto/home.html
@@ -20,7 +20,7 @@
                   <th>Cliente</th>
                   <th>Líder do Projeto</th>
                   <th>Orçamento</th>
-                  <th>Ações</th>
+                  <th sec:authorize="hasAuthority('ADMIN')">Ações</th>
                 </tr>
               </thead>
               <tbody>
@@ -39,10 +39,10 @@
                       <a type="button" data-toggle="popover" data-placement="top" data-content="Detalhes" data-trigger="hover" class="btn btn-primary" th:href="@{/projetos/{id} (id=${projeto.id})}">
                         <i class="fas fa-eye"></i>
                       </a>
-                      <a type="button" data-toggle="popover" data-placement="top" data-content="Editar" data-trigger="hover" class="btn btn-warning" th:href="@{/projetos/{id}/editar (id=${projeto.id})}">
+                      <a sec:authorize="hasAuthority('ADMIN')" type="button" data-toggle="popover" data-placement="top" data-content="Editar" data-trigger="hover" class="btn btn-warning" th:href="@{/projetos/{id}/editar (id=${projeto.id})}">
                         <i class="fas fa-edit"></i>
                       </a>
-                      <a 
+                      <a sec:authorize="hasAuthority('ADMIN')"
                         type="button" data-toggle="popover" data-placement="top" 
                         data-content="Remover" data-trigger="hover" class="btn btn-danger" 
                         th:href="@{/projetos/{id}/excluir (id=${projeto.id})}" 
